--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,50 @@
-<h2>Sign up</h2>
+<main class="container">
+    <div class="signup-form">
+        <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+            <h2>Create an Account</h2>
+            <p class="hint-text">Sign up with your social media account or email address</p>
+            <div class="social-btn text-center">
+                <a href="#" class="btn btn-primary btn-lg"><i class="fa fa-facebook"></i> Facebook</a>
+                <a href="#" class="btn btn-info btn-lg"><i class="fa fa-twitter"></i> Twitter</a>
+                <a href="#" class="btn btn-danger btn-lg"><i class="fa fa-google"></i> Google</a>
+            </div>
+            <div class="or-seperator"><b>or</b></div>
+            <div class="form-group">
+                <%= f.label :email %><br />
+                <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control input-lg" %>
+                <!-- <input type="text" class="form-control input-lg" name="username" placeholder="Username" required="required"> -->
+            </div>
+            <div class="form-group">
+                <!-- <input type="email" class="form-control input-lg" name="email" placeholder="Email Address" required="required"> -->
+                <!-- <div class="field"> -->
+                <%= f.label :email %><br />
+                <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control input-lg" %>
+            </div>
+           
+            <div class="form-group">
+                <!-- <input type="password" class="form-control input-lg" name="password" placeholder="Password" required="required"> -->
+                <%= f.label :password %>
+                <% if @minimum_password_length %>
+                    <%= @minimum_password_length %> characters minimum)
+                <% end %>
+                <%= f.password_field :password, autocomplete: "new-password", class: "form-control input-lg" %>
+            </div>
+            <div class="form-group">
+                <!-- <input type="password" class="form-control input-lg" name="confirm_password" placeholder="Confirm Password" required="required"> -->
+                <%= f.label :password_confirmation %><br />
+                <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control input-lg" %>
+            </div>  
+            <div class="form-group">
+                <button type="submit" class="btn btn-success btn-lg btn-block signup-btn">Sign Up</button>
+            </div>
+        <% end %>
+        <div class="text-center">Already have an account? <%= render "devise/shared/links" %></div>
+    </div>
+</main>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
 
-<%= render "devise/shared/links" %>
+
