--- a/app/views/parkings/parking.html.erb
+++ b/app/views/parkings/parking.html.erb
@@ -1,1 +1,7 @@
 <h1> Parking</h1>
+<%= @nuggies %>
+<%= link_to "Different Station?", add_choices_path %>
+<%= @value %>
+
+
+<%= progress_bar @progress %>
